test/tests/RangeForLoopNonNumeric.panda
class RangeForLoopNonNumeric {
    method test1() {
        for a in "Hello" ... "Goodbye" {
        }
    }

    method test2() {
        for a:String in 0 .. 10 {
        }
    }

    method test3() {
        for a:Bit in true .. false {
        }
    }

    method test4() {
        for a in 0 .. 10 by File("/tmp/foo") {
        }
    }
}